# EPSI_M1_MSPR-Groupe_RYMS

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/agents/: code_reviewer.md  data_analyst.md  data_engineer.md  data_scientist.md  project_manager.md  tech_lead.md
.github/workflows/: docs.yml
00-INDEX/: index.html
A1-Cadrage-Besoins/: index.html
A2-Architecture-BI/: index.html
B1-Pipeline-ETL/: index.html
B2-Entrepot-Referentiels/: index.html
C1-Modeles-ML/: index.html
D1-Visualisations/: index.html
E1-Qualite-Donnees/: index.html
E2-Securite-RGPD/: index.html
docs/: .gitkeep  ARCHITECTURE.md  CONVENTIONS.md  DOCUMENTATION.md  MCD.md  README.md  ROADMAP.md
docs/01-project-management/: ROADMAP.md
docs/02-architecture/: ARCHITECTURE.md  MCD_v2_scalable.md
docs/02-architecture/adr/: ADR-001-choix-bdd.md  ADR-002-choix-algo-ml.md  ADR-003-architecture-modulaire-etl.md  ADR-003-architecture-scalable-indicateurs.md  ADR-004-enrichissement-schema-bd.md  ADR-005-choix-perimetre-geographique.md
docs/02-architecture/database/: 01-mcd.md  02-mld.md  03-dictionnaire-donnees.md  04-regles-gestion.md  05-contraintes-integrite.md  06-index-optimisation.md  07-volumetrie-performance.md  08-evolutions-futures.md  README.md
docs/02-architecture/database/versions/: CHANGELOG.md  README.md  VERSIONS.md
docs/02-architecture/database/versions/v1.0/: MCD.md
docs/02-architecture/database/versions/v2.0/: MCD.md
docs/02-architecture/database/versions/v3.0/: MCD.md
docs/03-code-review/: README.md
docs/03-code-review/reviews/: 2026-02-11-etl-pipeline-load.md
docs/03-data-sources/: SOURCES_DONNEES.md
docs/04-setup-installation/: SETUP_DATABASE.md  SETUP_UV.md  VALIDATION_UV.md
docs/05-reports/: AUDIT_RGPD.md  PRESENTATION.md  RAPPORT_SYNTHESE.md  README.md
docs/06-dossier-projet/: 00-INDEX.md  A1-Cadrage-Besoins.md  A2-Architecture-BI.md  B1-Pipeline-ETL.md  B2-Entrepot-Referentiels.md  C1-Modeles-ML.md  D1-Visualisations.md  E1-Qualite-Donnees.md  E2-Securite-RGPD.md
docs/adr/: ADR-001-choix-bdd.md
notebooks/: 01_exploration.ipynb  02_feature_engineering_ml.ipynb  03_visualisation_avancee.ipynb
scripts/: init-db.sql
search/: search_index.json
src/: __init__.py
src/database/: README.md  __init__.py  alembic.ini  config.py
src/database/migrations/: env.py
src/database/migrations/versions/: 20260211_1129_7b72b070fd66_initial_schema.py  20260211_1418_a14be11ce7ab_nullable_election_columns.py  20260211_2358_5c74986a8b20_remove_obsolete_v2_tables_territoire_.py  20260212_0011_691a1578615b_create_schema_v3_0_all_models_without_.py
src/database/models/: __init__.py  arrondissement.py  base.py  bureau_vote.py  candidat.py  candidat_parti.py  canton.py  commune.py  departement.py  election.py  election_result.py  election_territoire.py  indicateur.py  parti.py  prediction.py  region.py  resultat_candidat.py  resultat_participation.py  territoire.py  type_election.py  type_indicateur.py
src/etl/: README.md  __init__.py  main.py
src/etl/extract/: README.md  __init__.py  api_datagouv.py  config.py  download_elections.py  download_emploi.py  download_securite.py  main.py
src/etl/extract/config/: __init__.py  settings.py
src/etl/extract/core/: __init__.py  elections.py  geographie.py  securite.py
src/etl/extract/utils/: __init__.py  download.py
src/etl/load/: README.md  __init__.py  main.py
src/etl/load/config/: __init__.py  settings.py
src/etl/load/core/: __init__.py  candidats.py  elections.py  geographie.py  indicateurs.py  territoire.py  type_indicateur.py
src/etl/load/utils/: __init__.py  validators.py
src/etl/transform/: README.md  __init__.py  main.py
src/etl/transform/config/: __init__.py  settings.py
src/etl/transform/core/: __init__.py  elections.py  geographie.py  securite.py
src/etl/transform/utils/: __init__.py  parsing.py
